--- a/app/src/main/res/layout/fragment_favorite_h.xml
+++ b/app/src/main/res/layout/fragment_favorite_h.xml
@@ -7,11 +7,11 @@
     android:background="@color/footerview"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scroll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:overScrollMode="never">
+    <!--<android.support.v4.widget.NestedScrollView-->
+        <!--android:id="@+id/scroll"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:overScrollMode="never">-->
 
         <com.hotelnow.utils.NonScrollListView
             android:id="@+id/h_list"
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"
             android:divider="@android:color/transparent"
             android:listSelector="@android:color/transparent"></com.hotelnow.utils.NonScrollListView>
-    </android.support.v4.widget.NestedScrollView>
+    <!--</android.support.v4.widget.NestedScrollView>-->
 
     <include
         android:id="@+id/empty_view"
