--- a/app/src/main/res/layout/fragment_favorite_a.xml
+++ b/app/src/main/res/layout/fragment_favorite_a.xml
@@ -13,12 +13,46 @@
         android:layout_height="match_parent"
         android:overScrollMode="never">
 
-        <com.hotelnow.utils.NonScrollListView
-            android:id="@+id/h_list"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@android:color/transparent"
-            android:listSelector="@android:color/transparent"></com.hotelnow.utils.NonScrollListView>
+            android:descendantFocusability="blocksDescendants">
+
+            <RelativeLayout
+                android:id="@+id/view_filter"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:visibility="gone"
+                android:background="@color/white">
+
+                <TextView
+                    android:id="@+id/btn_cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:layout_toRightOf="@+id/btn_date"
+                    android:textColor="@color/termtext"
+                    android:text="@string/all_cancel"
+                    android:gravity="right"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="16dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/back_line" />
+            </RelativeLayout>
+
+            <com.hotelnow.utils.NonScrollListView
+                android:id="@+id/h_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:listSelector="@android:color/transparent"
+                android:layout_below="@+id/view_filter"></com.hotelnow.utils.NonScrollListView>
+        </RelativeLayout>
     </android.support.v4.widget.NestedScrollView>
 
     <include
