--- a/app/src/main/res/layout/fragment_favorite_h.xml
+++ b/app/src/main/res/layout/fragment_favorite_h.xml
@@ -7,19 +7,109 @@
     android:background="@color/footerview"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!--<android.support.v4.widget.NestedScrollView-->
-        <!--android:id="@+id/scroll"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:overScrollMode="never">-->
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:overScrollMode="never">
 
-        <com.hotelnow.utils.NonScrollListView
-            android:id="@+id/h_list"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@android:color/transparent"
-            android:listSelector="@android:color/transparent"></com.hotelnow.utils.NonScrollListView>
-    <!--</android.support.v4.widget.NestedScrollView>-->
+            android:descendantFocusability="blocksDescendants">
+
+            <RelativeLayout
+                android:id="@+id/view_filter"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:visibility="gone"
+                android:background="@color/white">
+
+                <TextView
+                    android:id="@+id/tv_date_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="날짜 선택"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="13dp"
+                    android:visibility="gone"
+                    android:textColor="@color/termtext" />
+
+                <RelativeLayout
+                    android:id="@+id/btn_date"
+                    android:layout_width="140dp"
+                    android:layout_height="34dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_centerVertical="true"
+                    android:layout_toRightOf="@+id/tv_date_title"
+                    android:visibility="visible"
+                    android:background="@drawable/style_edittext_gray_2border">
+
+                    <ImageView
+                        android:id="@+id/iv_date"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentLeft="true"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/ico_input_calendar2" />
+
+                    <ImageView
+                        android:id="@+id/iv_open2"
+                        android:layout_width="14dp"
+                        android:layout_height="14dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="6dp"
+                        android:layout_centerVertical="true"
+                        android:scaleType="fitXY"
+                        android:background="@drawable/btn_detail_open" />
+
+                    <TextView
+                        android:id="@+id/tv_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/iv_open2"
+                        android:layout_toRightOf="@+id/iv_date"
+                        android:textSize="13dp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:layout_marginLeft="8dp"
+                        android:layout_centerVertical="true"
+                        android:textColor="@color/purple"
+                        tools:text="9/21/~9/22" />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/btn_cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12dp"
+                    android:layout_toRightOf="@+id/btn_date"
+                    android:textColor="@color/termtext"
+                    android:text="@string/all_cancel"
+                    android:gravity="right"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="16dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/back_line" />
+            </RelativeLayout>
+            <com.hotelnow.utils.NonScrollListView
+                android:id="@+id/h_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:divider="@android:color/transparent"
+                android:listSelector="@android:color/transparent"
+                android:layout_below="@+id/view_filter"></com.hotelnow.utils.NonScrollListView>
+        </RelativeLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
     <include
         android:id="@+id/empty_view"
